--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="column is-12">
             <div class="column is-12">
               <h2 class="p_pensiun" style="font-weight:bold; font-size:25px; margin-bottom:-25px;">
-                Pemasukan Iuran <a class="button is-link" style="margin-top:10px; margin-left:10px;">Read More</a>
+                Pemasukan Iuran <a href="iuran.html" class="button is-link" style="margin-top:10px; margin-left:10px;">Read More</a>
               </h2>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <section class="balanceBox is-four-fifths">
               <div class="headerBox">
                 <h1 class="balanceHeader" style="font-weight:bold">
-                  Pemasukan SK  <a class="button is-link" style="margin-top:10px; margin-left:10px;">Read More</a>
+                  Pemasukan SK  <a href="sk.html" class="button is-link" style="margin-top:10px; margin-left:10px;">Read More</a>
                 </h1>
               </div>
               <!--headerBox-->
