--- a/kelebihan_bayar.html
+++ b/kelebihan_bayar.html
@@ -16,8 +16,148 @@
   <link rel="stylesheet" href="css/bar_pensiun.css">
   <link rel="stylesheet" href="css/dataTables.bulma.css">
   <link rel="stylesheet" href="css/dataTables.bulma.min.css">
+  <link rel="stylesheet" href="css/delete_data.css">
 
 </head>
+
+<style>
+
+/**
+ * Overlay
+ * -- only show for tablet and up
+ */
+@media only screen and (min-width: 40em) {
+  .modal-overlay {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), visibility 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), visibility 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  }
+  .modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+/**
+ * Modal
+ */
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  margin: 0 auto;
+  background-color: #fff;
+  width: 600px;
+  max-width: 75rem;
+  min-height: 20rem;
+  padding: 1rem;
+  border-radius: 3px;
+  opacity: 0;
+  overflow-y: auto;
+  visibility: hidden;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+}
+.modal .close-modal {
+  position: absolute;
+  cursor: pointer;
+  top: 5px;
+  right: 15px;
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+.modal .close-modal svg {
+  width: 1.75em;
+  height: 1.75em;
+}
+.modal .modal-content {
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+.modal.active {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.modal.active .modal-content {
+  opacity: 1;
+}
+.modal.active .close-modal {
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  opacity: 1;
+}
+
+/**
+ * Mobile styling
+ */
+@media only screen and (max-width: 39.9375em) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    border-radius: 0;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    padding: 0 !important;
+  }
+
+  .close-modal {
+    right: 20px !important;
+  }
+}
+
+</style>
 
 <body>
 
@@ -227,27 +367,30 @@
                     </thead>
                     <tfoot>
                             <tr>
-                                <th>Name</th>
-                                <th>Company</th>
-                                <th>Office</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th colspan="4">Jumlah</th>
+                                <th>2000</th>
                             </tr>
                     </tfoot>
                     <tbody>
                         <tr>
-                            <td>Kimberley</td>
-                            <td>Non Egestas A Inc.</td>
-                            <td>Fremantle</td>
-                            <td>February 7th, 2016</td>
-                            <td>$218,565.75</td>
+                            <td style="padding-top:15px;">Kimberley</td>
+                            <td style="padding-top:15px;">Non Egestas A Inc.</td>
+                            <td style="padding-top:15px;">Fremantle</td>
+                            <td style="padding-top:15px;">February 7th, 2016</td>
+                            <td style="width:200px">
+                                <a class="button is-link" id="formDetail2">Detail</a>
+                            </td>
                         </tr>
                         <tr>
-                            <td>Hammett</td>
-                            <td>Dui LLC</td>
-                            <td>Zuccarello</td>
-                            <td>June 27th, 2010</td>
-                            <td>$219,811.59</td>
+                            <td style="padding-top:15px;">Hammett</td>
+                            <td style="padding-top:15px;">Dui LLC</td>
+                            <td style="padding-top:15px;">Zuccarello</td>
+                            <td style="padding-top:15px;">June 27th, 2010</td>
+                            <td style="width:200px">
+                                <a class="button is-success" id="formEdit">Edit</a>
+                                <a class="button is-danger cd-popup-trigger">Delete</a>
+                                <a class="button is-link" id="formDetail">Detail</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -323,6 +466,33 @@
                 </div>
             </div>
           </div>
+
+          <!-- Pop up edit muncul -->
+        <div class="modal-overlay">
+            <div class="modal" style="text-align:center">
+                <a class="close-modal">
+                <svg viewBox="0 0 20 20">
+                    <path fill="#000000" d="M15.898,4.045c-0.271-0.272-0.713-0.272-0.986,0l-4.71,4.711L5.493,4.045c-0.272-0.272-0.714-0.272-0.986,0s-0.272,0.714,0,0.986l4.709,4.711l-4.71,4.711c-0.272,0.271-0.272,0.713,0,0.986c0.136,0.136,0.314,0.203,0.492,0.203c0.179,0,0.357-0.067,0.493-0.203l4.711-4.711l4.71,4.711c0.137,0.136,0.314,0.203,0.494,0.203c0.178,0,0.355-0.067,0.492-0.203c0.273-0.273,0.273-0.715,0-0.986l-4.711-4.711l4.711-4.711C16.172,4.759,16.172,4.317,15.898,4.045z"></path>
+                </svg>
+                </a><!-- close modal -->
+
+                <div class="modal-content">
+                    <h3>Some content here</h3>
+                </div><!-- content -->
+            </div><!-- modal -->
+        </div><!-- overlay -->
+
+        <!-- Pop up delete muncul -->
+        <div class="cd-popup" role="alert">
+            <div class="cd-popup-container">
+                <p>Are you sure you want to delete this element?</p>
+                <ul class="cd-buttons ul_1">
+                    <li class="li_1"><a id="a_1" href="#0">Yes</a></li>
+                    <li class="li_1"><a id="a_1" href="#0">No</a></li>
+                </ul>
+                <a id="a_1" href="#0" class="cd-popup-close img-replace">Close</a>
+            </div> <!-- cd-popup-container -->
+        </div> <!-- cd-popup -->
       </main>
     </div>
   </div>
@@ -332,6 +502,51 @@
   <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" src="js/dataTables.bulma.min.js"></script>
   
+
+    <script>
+    jQuery(document).ready(function($){
+        //open popup
+        $('.cd-popup-trigger').on('click', function(event){
+            event.preventDefault();
+            $('.cd-popup').addClass('is-visible');
+        });
+        
+        //close popup
+        $('.cd-popup').on('click', function(event){
+            if( $(event.target).is('.cd-popup-close') || $(event.target).is('.cd-popup') ) {
+                event.preventDefault();
+                $(this).removeClass('is-visible');
+            }
+        });
+        //close popup when clicking the esc keyboard button
+        $(document).keyup(function(event){
+            if(event.which=='27'){
+                $('.cd-popup').removeClass('is-visible');
+            }
+        });
+    });
+    </script>
+
+  <script>
+    var elements = $('.modal-overlay, .modal');
+
+    $('#formEdit').click(function(){
+        elements.addClass('active');
+    });
+
+    $('#formDetail').click(function(){
+        elements.addClass('active');
+    });
+
+    $('#formDetail2').click(function(){
+        elements.addClass('active');
+    });
+
+    $('.close-modal').click(function(){
+        elements.removeClass('active');
+    });
+  </script>
+
   <script>
 		$(document).ready(function() {
 		    $('#fullfeatures').DataTable({
@@ -360,8 +575,8 @@
             	}
 		    });
 		});
-	</script>
-
+    </script>
+    
   <script src="js/bar_sk.js"></script>
   <script src="js/chart_pensiun.js"></script>
   <script src="js/chart_atas.js"></script>
